--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,9 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: MIT + file LICENCE
 Encoding: UTF-8
+Depends: R (>= 2.10)
 Imports: httr2, rappdirs
-Suggests: polite
+Suggests: polite, testthat (>= 3.0.0)
 RoxygenNote: 7.2.1
-Depends: 
-    R (>= 2.10)
 LazyData: true
+Config/testthat/edition: 3
