Adding most of the API wrappers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,30 @@
 export(call_pk_api)
 export(call_pk_resource_list)
 export(clear_pk_cache)
+export(get_berry)
+export(get_berry_firmness)
+export(get_berry_flavor)
+export(get_berry_flavour)
+export(get_contest_effect)
+export(get_contest_type)
 export(get_egg_group)
+export(get_encounter_condition)
+export(get_encounter_condition_value)
+export(get_encounter_method)
+export(get_evolution_chain)
+export(get_evolution_trigger)
+export(get_generation)
+export(get_item)
+export(get_item_attribute)
+export(get_item_category)
+export(get_item_fling_effect)
+export(get_item_pocket)
+export(get_pokedex)
 export(get_pokemon)
 export(get_pokemon_ability)
 export(get_pokemon_characteristic)
 export(get_pokemon_gender)
+export(get_super_contest_effect)
+export(get_version)
+export(get_version_groups)
 importFrom(utils,adist)
