--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,12 +12,7 @@ License: MIT + file LICENCE
 Encoding: UTF-8
 Depends: R (>= 2.10)
 Imports: httr2, rappdirs
-Suggests: 
-    knitr,
-    polite,
-    rmarkdown,
-    testthat (>= 3.0.0)
+Suggests: knitr, rmarkdown, testthat (>= 3.0.0)
 RoxygenNote: 7.2.1
-LazyData: true
 Config/testthat/edition: 3
 VignetteBuilder: knitr
