Fixing broken endpoint calls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,12 +43,12 @@ export(get_pokemon_color)
 export(get_pokemon_colour)
 export(get_pokemon_form)
 export(get_pokemon_habitat)
-export(get_pokemon_location_areas)
+export(get_pokemon_location_area)
 export(get_pokemon_shape)
 export(get_pokemon_species)
 export(get_stat)
 export(get_super_contest_effect)
 export(get_type)
 export(get_version)
-export(get_version_groups)
+export(get_version_group)
 importFrom(utils,adist)
