Add random ID function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,4 +51,5 @@ export(get_super_contest_effect)
 export(get_type)
 export(get_version)
 export(get_version_group)
+export(random_pk_id)
 importFrom(utils,adist)
