--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,5 +51,6 @@ export(get_super_contest_effect)
 export(get_type)
 export(get_version)
 export(get_version_group)
+export(list_categories)
 export(random_pk_id)
 importFrom(utils,adist)
